  * Turns the Ubiquity KDE window into a regular window and rework
    the layout of widgets to provide more space to the main content.
    The labels on the left now wrap to the next line if they are too long,
    ensuring they are never truncated.
  * KDE: Improve the layout of Prepare step

  [ Julien Lavergne ]
  * Use feh to draw the wallpaper on Lubuntu when using ubiquity-dm.
  
  [ Ma Jun (Kylin Team) ]
  * Fix referencing variable before assignment (LP: #945027)

  [ Kobe Lee ]
  * Show OS column in manual partitioning page. (LP: #1100694)

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Thu, 21 Feb 2013 16:42:19 +0000

ubiquity (2.13.12) raring; urgency=low

  [ Colin Watson ]
  * While displaying question or error dialogs, only change the busy cursor
    state rather than also allowing changing step (LP: #1095684).
  * Use an action group when marking packages for install or delete in the
    apt cache; this is much faster when many packages are involved, since it
    avoids repeating autoremoval calculations over and over again.
  * Sort and consolidate imports.
  * Fix ordering of encryption password strength indications (LP: #1068391).
  * At the end of the language install plugin, read all locale-related keys
    from (/target)/etc/default/locale and set them in the installer's own
    environment.
  * If the combination of language and location does not identify a
    supported combined locale, use a locale based on the language for
    translation-like locale categories and pick one based on the location
    for other locale categories (LP: #1094872).  There are still some
    locations where we cannot pick a language element of a location-based
    locale because this is unclear or contentious, and in those cases we
    stick to the old behaviour of having the locale only reflect the
    country.

  [ Aurélien Gâteau ]
  * KDE frontend: show name of installed OS as partition name if
    available

  [ Dmitrijs Ledkovs ]